--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -16,5 +16,5 @@ FROM nginx:1.22-alpine
 COPY --from=build /app/frontend/build/ /usr/share/nginx/html
 
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx/nginx.conf /etc/nginx/conf.d
+RUN rm /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
