search engine added

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ GitHub.sublime-settings
 
 # Visual Studio Code # 
 .vscode/* 
+.vscode/
 !.vscode/settings.json 
 !.vscode/tasks.json 
 !.vscode/launch.json 
@@ -137,3 +138,4 @@ GitHub.sublime-settings
 .history
 
 .idea
+win_env/
