--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+certifi==2022.6.15
 Django==4.1
 django-cors-headers==3.13.0
+django-elasticsearch-dsl==7.2.0
 django-environ==0.9.0
 djangorestframework==3.13.1
+elastic-transport==8.1.2
+elasticsearch==7.14.0
+elasticsearch-dsl==7.4.0
 gunicorn==20.1.0
 Pillow==9.2.0
 psycopg2==2.9.3
+python-dateutil==2.8.2
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.11
