--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ server {
     location /admin {
         try_files $uri @proxy_api;
     }
-    location /summernote {
+    location /search {
         try_files $uri @proxy_api;
     }
     location @proxy_api {
