--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ Django==4.1
 django-cors-headers==3.13.0
 django-elasticsearch-dsl==7.2.0
 django-environ==0.9.0
+django-rest-multiple-models==2.1.3
 djangorestframework==3.13.1
 elastic-transport==8.1.2
 elasticsearch==7.14.0
