robots.txt added:

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,6 +42,9 @@ server {
         proxy_redirect off;
         proxy_pass   http://django:8000;
     }
+    location /robots.txt/ {
+        alias /static/robots.txt/;
+    }
     location /django_static/ {
         autoindex on;
         alias /static/;
