robots.txt update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ server {
         proxy_pass   http://django:8000;
     }
     location /robots.txt/ {
-        alias /static/robots.txt/;
+        alias /robots.txt;
     }
     location /django_static/ {
         autoindex on;
