--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -14,7 +14,7 @@ RUN npm run build
 FROM nginx:1.22-alpine
 
 COPY --from=build /app/frontend/build/ /usr/share/nginx/html
-COPY nginx/robots.txt /static
+COPY nginx/robots.txt /
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d
