robots google optimisation

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Uluus.ru",
-  "name": "Uluus.ru",
+  "name": "Сайт объявлений по улусам",
+  "description": "Сайт объявлений по улусам Республики Саха (Якутия). Выставка объявлений авто, недвижимости, для дома, еды, услуг и прочее.",
   "icons": [
     {
       "src": "favicon.ico",
