--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,15 +2,18 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 certifi==2022.6.15
 Django==4.1
+django-appconf==1.0.5
 django-cors-headers==3.13.0
 django-elasticsearch-dsl==7.2.0
 django-environ==0.9.0
+django-imagekit==4.1.0
 django-rest-multiple-models==2.1.3
 djangorestframework==3.13.1
 elastic-transport==8.1.2
 elasticsearch==7.14.0
 elasticsearch-dsl==7.4.0
 gunicorn==20.1.0
+pilkit==2.0
 Pillow==9.2.0
 psycopg2==2.9.3
 python-dateutil==2.8.2
