--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Uluus.ru",
   "name": "Сайт объявлений по улусам",
-  "description": "Сайт объявлений по улусам Республики Саха (Якутия). Выставка объявлений авто, недвижимости, для дома, еды, услуг и прочее.",
+  "description": "Доска бесплатных объявлений Якутска и улусов Республики Саха (Якутия). Все объявления Республики Саха (Якутия) в одном месте. Вы можете подать объявление по РС(Я) совершенно бесплатно!",
   "icons": [
     {
       "src": "favicon.ico",
