--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,9 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
+    location /robots.txt {
+        alias /robots.txt;
+    }
 }
 server {
     listen 443 ssl;
@@ -42,7 +45,7 @@ server {
         proxy_redirect off;
         proxy_pass   http://django:8000;
     }
-    location /robots.txt/ {
+    location /robots.txt {
         alias /robots.txt;
     }
     location /django_static/ {
