--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -15,6 +15,7 @@ FROM nginx:1.22-alpine
 
 COPY --from=build /app/frontend/build/ /usr/share/nginx/html
 COPY nginx/robots.txt /
+COPY nginx/sitemap.xml /
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d
