--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,9 @@ server {
     location /robots.txt {
         alias /robots.txt;
     }
+    location /sitemap.xml {
+        alias /sitemap.xml
+    }
 }
 server {
     listen 443 ssl;
@@ -47,6 +50,9 @@ server {
     }
     location /robots.txt {
         alias /robots.txt;
+    }
+    location /sitemap.xml {
+        alias /sitemap.xml
     }
     location /django_static/ {
         autoindex on;
