forgot to add semicolon

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ server {
         alias /robots.txt;
     }
     location /sitemap.xml {
-        alias /sitemap.xml
+        alias /sitemap.xml;
     }
 }
 server {
@@ -52,7 +52,7 @@ server {
         alias /robots.txt;
     }
     location /sitemap.xml {
-        alias /sitemap.xml
+        alias /sitemap.xml;
     }
     location /django_static/ {
         autoindex on;
