some seo update

--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -5,7 +5,7 @@ FROM node as build
 WORKDIR /app/frontend
 # COPY ./frontend/package.json /app/frontend
 # COPY ./frontend/package-lock.json /app/frontend
-COPY ./* /app/frontend
+COPY ./* /app/frontend/
 RUN npm install
 RUN npm run build
 
