http robots stricted

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,10 +12,7 @@ server {
         return 301 https://$host$request_uri;
     }
     location /robots.txt {
-        alias /robots.txt;
-    }
-    location /sitemap.xml {
-        alias /sitemap.xml;
+        alias /robots80.txt;
     }
 }
 server {
