--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -14,6 +14,7 @@ RUN npm run build
 FROM nginx:1.22-alpine
 
 COPY --from=build /app/frontend/build/ /usr/share/nginx/html
+COPY nginx/robots80.txt /
 COPY nginx/robots.txt /
 COPY nginx/sitemap.xml /
 
